--- a/home.css
+++ b/home.css
@@ -12,7 +12,7 @@ html, body {
     background-color: var(--l_cream);
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 0.7em;
-    max-width: 768px;
+    max-width: 920px;
 }
 
 #intro .menu {
@@ -149,14 +149,15 @@ header ul{display: none;}
     font-size: 0.8em;
 }
 
-/* Tablets & iPads */
-@media (min-width: 768px){
+/*
+Tablets & iPads
+@media (min-width: 920px){
     html, body {
         margin: 0; padding: 0 0.1em;
         background-color: var(--l_cream);
         font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         font-size: 1em;
-        max-width: 1024px;
+        max-width: 1920px;
     }
 
     #intro .menu {display: none;}
@@ -183,7 +184,7 @@ header ul{display: none;}
         float: right; height: 2em; align-items: center;
         margin: 1em;
     }
-    /* Menu toggle switch */
+    Menu toggle switch
     header ul{display: flex;}
     #intro header li{
         list-style-type: none;
@@ -289,6 +290,8 @@ header ul{display: none;}
         font-size: 0.8em;
     }
 }
+
+*/
 
 /* PC screen */
 @media (min-width: 1024px){
