project_landing_page update

--- a/home.css
+++ b/home.css
@@ -299,8 +299,8 @@ Tablets & iPads
         margin: 0; padding: 0 0.1em;
         background-color: var(--l_cream);
         font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        font-size: 1.2em;
-        max-width: 1920px;
+        font-size: 1em;
+        max-width: 1600px;
     }
 
     #intro .menu {display: none;}
@@ -431,5 +431,15 @@ Tablets & iPads
         background-color: var(--black);
         padding: 0.3em; border-radius: 0.35em;
         font-size: 0.8em;
+    }
+}
+
+@media (min-width: 1600px){
+    html, body {
+        margin: 0; padding: 0 0.1em;
+        background-color: var(--l_cream);
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-size: 1.3em;
+        max-width: 1920px;
     }
 }
