--- a/home.css
+++ b/home.css
@@ -149,6 +149,34 @@ header ul{display: none;}
     font-size: 0.8em;
 }
 
+
+@media (min-width: 480px){
+    html, body {
+        margin: 0; padding: 0 0.1em;
+        background-color: var(--l_cream);
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-size: 0.85em;
+    }
+}
+
+@media (min-width: 640px){
+    html, body {
+        margin: 0; padding: 0 0.1em;
+        background-color: var(--l_cream);
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-size: 0.95em;
+    }
+}
+
+@media (min-width: 840px){
+    html, body {
+        margin: 0; padding: 0 0.1em;
+        background-color: var(--l_cream);
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-size: 1.1em;
+    }
+}
+
 /*
 Tablets & iPads
 @media (min-width: 920px){
@@ -299,7 +327,7 @@ Tablets & iPads
         margin: 0; padding: 0 0.1em;
         background-color: var(--l_cream);
         font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        font-size: 1em;
+        font-size: 1.2em;
         max-width: 1600px;
     }
 
